--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="carousel-item active">
               <img src="robert-keane-rlbG0p_nQOU-unsplash.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                  <img src="Ellipse 1.png" alt="" style="width: 300px;">
+                  <img src="Ellipse 1.png"  class="img-fluid" alt="" style="width: 300px;">
                   <p></p>
                   <h5>IRFAN RAMADHANI</h5>
                   <p class="sub-judul">I AM UI / UX BASED IN YOGYAKARTA</p>
