update ke empat

--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
     <!-- css animasi -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+    <!-- javascript -->
+    <script src="script.js"></script>
+
     <title>irfan ramadhani 20.11.3796</title>
   </head>
   <body>
+
+    <!-- animasi csrool js native -->
+    <div id="progress">
+      <span id="progress-value">&#x1F815;</span>
+    </div>
+    <!-- akhir animasi scrool js native -->
       <!-- awal navbar -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
@@ -72,8 +81,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-header text-center">
-                        <h2>About Me</h2>
-                        <p>Saya Mahasiswa Universitas Amikom Yogyakarta Angkatan 2020, dan Sekarang Bekerja Sebagai UI/UX di Rafana Team</p>
+                        <h2 data-aos="fade-up" data-aos-duration="500">About Me</h2>
+                        <p data-aos="fade-up" data-aos-duration="600">Saya Mahasiswa Universitas Amikom Yogyakarta Angkatan 2020, dan Sekarang Bekerja Sebagai UI/UX di Rafana Team</p>
                         <div class="kelompokfoto ms-5">
                           <div class="d-inline image"><img src="./f1.png" data-aos="flip-up" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
                           <div class="d-inline image"><img src="./f2.png" data-aos="flip-left" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
@@ -92,8 +101,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-header text-center pb-5">
-                        <h2>Our Projects</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Non, quo.</p>
+                        <h2 data-aos="fade-up" data-aos-duration="500">Our Projects</h2>
+                        <p data-aos="fade-up" data-aos-duration="600">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Non, quo.</p>
                     </div>
                 </div>
             </div>
@@ -145,8 +154,8 @@
           <div class="row">
               <div class="col-md-12">
                   <div class="section-header text-center pb-5">
-                      <h2>Contact Us</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Non, quo.</p>
+                      <h2 data-aos="fade-up" data-aos-duration="500">Contact Us</h2>
+                      <p data-aos="fade-up" data-aos-duration="600">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Non, quo.</p>
                   </div>
               </div>
           </div>
