revisi ke sekian kali 1

--- a/index.html
+++ b/index.html
@@ -59,22 +59,41 @@
       <!-- akhir navbar -->
 
       <!-- awal carousel -->
-      <section id="home">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <!-- <section id="home">
+        <div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="robert-keane-rlbG0p_nQOU-unsplash.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                  <img src="Ellipse 1.png"  class="img-fluid" alt="" style="width: 300px;">
-                  <p></p>
-                  <h5>IRFAN RAMADHANI</h5>
-                  <p class="sub-judul">I AM UI / UX BASED IN YOGYAKARTA</p>
+              <div> 
+                <img src="robert-keane-rlbG0p_nQOU-unsplash.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption">
+                    <img src="Ellipse 1.png"  class="img-fluid" alt="" style="width: 300px;">
+                    <p></p>
+                    <h5>IRFAN RAMADHANI</h5>
+                    <p class="sub-judul">I AM UI / UX BASED IN YOGYAKARTA</p>
+                </div>
+
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- akhir carousel -->
+
+      <!-- Hero Section -->
+      <section id="hero-section">
+        <div class="container-fluid px-0 bg-danger" style="min-height: 50vh; background-image: url(robert-keane-rlbG0p_nQOU-unsplash.jpg); background-size: cover; background-repeat: no-repeat;">
+          <div class="hero-content d-flex justify-content-center w-100">
+            <div class="hero-sub d-flex flex-column mt-5">
+              <div class="hero-pic d-flex justify-content-center">
+                <img src="Ellipse 1.png"  class="img-fluid" alt="" style="width: 300px;">
+              </div>
+              <h5 class="text-center">IRFAN RAMADHANI</h5>
+              <p class="sub-judul text-center">I AM UI / UX BASED IN YOGYAKARTA</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Akhir hero Section -->
 
       <!-- AWAL ABOUT -->
       <section id="about" class="about">
