--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <!-- akhir animasi scrool js native -->
       <!-- awal navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#" style="font-weight: 700; color:#EA2B32;">IrfanRamadhani</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                <a class="nav-link active" aria-current="page" href="#hero-section">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
