update ke sekian kalinya ke tiga

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 
       <!-- Hero Section -->
       <section id="hero-section">
-        <div class="container-fluid px-0 bg-danger" style="min-height: 50vh; background-image: url(robert-keane-rlbG0p_nQOU-unsplash.jpg); background-size: cover; background-repeat: no-repeat;">
+        <div class="container-fluid px-0 bg-danger" style="min-height: 95vh; background-image: url(robert-keane-rlbG0p_nQOU-unsplash.jpg); background-size: cover; background-repeat: no-repeat;">
           <div class="hero-content d-flex justify-content-center w-100">
             <div class="hero-sub d-flex flex-column mt-5">
               <div class="hero-pic d-flex justify-content-center">
-                <img src="Ellipse 1.png"  class="img-fluid" alt="" style="width: 300px;">
+                <img src="Ellipse 1.png"  class="img-fluid mt-5" alt="" style="width: 300px;">
               </div>
               <h5 class="text-center">IRFAN RAMADHANI</h5>
               <p class="sub-judul text-center">I AM UI / UX BASED IN YOGYAKARTA</p>
@@ -104,10 +104,10 @@
                         <h2 data-aos="fade-up" data-aos-duration="500">About Me</h2>
                         <p data-aos="fade-up" data-aos-duration="600">Saya Mahasiswa Universitas Amikom Yogyakarta Angkatan 2020, dan Sekarang Bekerja Sebagai UI/UX di Rafana Team</p>
                         <div class="kelompokfoto ms-5">
-                          <div class="d-inline image"><img src="./f1.png" data-aos="flip-up" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
-                          <div class="d-inline image"><img src="./f2.png" data-aos="flip-left" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
-                          <div class="d-inline image"><img src="./f3.png" data-aos="flip-right" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
-                          <div class="d-inline image"><img src="./f4.png" data-aos="flip-up" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
+                          <div class="d-inline image mx-1"><img src="./f1.png" data-aos="flip-up" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
+                          <div class="d-inline image mx-1"><img src="./f2.png" data-aos="flip-left" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
+                          <div class="d-inline image mx-1"><img src="./f3.png" data-aos="flip-right" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
+                          <div class="d-inline image mx-1"><img src="./f4.png" data-aos="flip-up" data-aos-duration="500" class="border border-warning border-3" alt="" style="width: 300px;"></div>
                         </div>
                     </div>
                 </div>
